# Tableau_Multisheet_Export

./: README.md  app.py  image_processor.py  pyproject.toml  readme.md  render.yaml  requirements.txt  tableau_api.py
attached_assets/: Tableau_1749841676454.py
output/_/: _.docx  summary.txt
output/temp/: dashboard_report.docx  tableau_report1.docx
static/css/: custom.css
static/js/: cropper.js
templates/: crop.html  index.html  login.html
